<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/Programa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Valor1"/>
    <EditText
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:id="@+id/eNum1"
        android:inputType="number"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Valor2"/>
        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eNum2"
            android:inputType="number"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:id="@+id/rSum"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:id="@+id/rRest"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:id="@+id/rMulti"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Div"
            android:id="@+id/rDiv"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bCalcular"
        android:id="@+id/bCalcular"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Result"/>
        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eTotal"/>

    </LinearLayout>

</LinearLayout>
